# argos

./: .gitignore  README.md  pyproject.toml  run.sh  setup.py  test_date.js
argos/: .gitignore  docker-compose.yml
argos/backend/: Dockerfile  agents.py  main.py  orchestrator.py  requirements.txt
argos/backend/tests/: test_agents.py  test_api.py
argos/frontend/: package-lock.json  package.json
argos/frontend/src/app/: globals.css  layout.tsx  page.tsx
argos/frontend/src/components/: EventList.tsx  Filter.tsx  Map.tsx  SettingsModal.tsx  ThemeToggle.tsx
