[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "ARGOS Wedding Discovery API"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "geoalchemy2",
    "psycopg2-binary",
    "pydantic",
    "redis",
    "celery",
    "pytest",
    "httpx",
    "python-multipart"
]

[tool.setuptools]
packages = ["argos", "argos.backend", "argos.backend.tests"]
